# pkg/research-pillars/api/api_grpc.pb.go
@@ -1,6 +1,6 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
 // versions:
-// - protoc-gen-go-grpc v1.6.0
+// - protoc-gen-go-grpc v1.6.1
 // - protoc             v6.31.1
 // source: research-pillars/api/api.proto
 
@@ -2002,6 +2002,7 @@ var Displays_ServiceDesc = grpc.ServiceDesc{
 const (
 	ParticipantCodes_GetCodes_FullMethodName      = "/proto.api.ParticipantCodes/GetCodes"
 	ParticipantCodes_GenerateCodes_FullMethodName = "/proto.api.ParticipantCodes/GenerateCodes"
+	ParticipantCodes_GenerateCode_FullMethodName  = "/proto.api.ParticipantCodes/GenerateCode"
 	ParticipantCodes_AssignCode_FullMethodName    = "/proto.api.ParticipantCodes/AssignCode"
 	ParticipantCodes_DeleteCode_FullMethodName    = "/proto.api.ParticipantCodes/DeleteCode"
 	ParticipantCodes_UnassignCode_FullMethodName  = "/proto.api.ParticipantCodes/UnassignCode"
@@ -2013,6 +2014,7 @@ const (
 type ParticipantCodesClient interface {
 	GetCodes(ctx context.Context, in *GetCodesRequest, opts ...grpc.CallOption) (*GetCodesResponse, error)
 	GenerateCodes(ctx context.Context, in *GenerateCodesRequest, opts ...grpc.CallOption) (*GenerateCodesResponse, error)
+	GenerateCode(ctx context.Context, in *GenerateCodeRequest, opts ...grpc.CallOption) (*GenerateCodeResponse, error)
 	AssignCode(ctx context.Context, in *AssignCodeRequest, opts ...grpc.CallOption) (*AssignCodeResponse, error)
 	DeleteCode(ctx context.Context, in *DeleteCodeRequest, opts ...grpc.CallOption) (*DeleteCodeResponse, error)
 	UnassignCode(ctx context.Context, in *UnassignCodeRequest, opts ...grpc.CallOption) (*UnassignCodeResponse, error)
@@ -2040,6 +2042,16 @@ func (c *participantCodesClient) GenerateCodes(ctx context.Context, in *Generate
 	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
 	out := new(GenerateCodesResponse)
 	err := c.cc.Invoke(ctx, ParticipantCodes_GenerateCodes_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *participantCodesClient) GenerateCode(ctx context.Context, in *GenerateCodeRequest, opts ...grpc.CallOption) (*GenerateCodeResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(GenerateCodeResponse)
+	err := c.cc.Invoke(ctx, ParticipantCodes_GenerateCode_FullMethodName, in, out, cOpts...)
 	if err != nil {
 		return nil, err
 	}
@@ -2082,6 +2094,7 @@ func (c *participantCodesClient) UnassignCode(ctx context.Context, in *UnassignC
 type ParticipantCodesServer interface {
 	GetCodes(context.Context, *GetCodesRequest) (*GetCodesResponse, error)
 	GenerateCodes(context.Context, *GenerateCodesRequest) (*GenerateCodesResponse, error)
+	GenerateCode(context.Context, *GenerateCodeRequest) (*GenerateCodeResponse, error)
 	AssignCode(context.Context, *AssignCodeRequest) (*AssignCodeResponse, error)
 	DeleteCode(context.Context, *DeleteCodeRequest) (*DeleteCodeResponse, error)
 	UnassignCode(context.Context, *UnassignCodeRequest) (*UnassignCodeResponse, error)
@@ -2100,6 +2113,9 @@ func (UnimplementedParticipantCodesServer) GetCodes(context.Context, *GetCodesRe
 }
 func (UnimplementedParticipantCodesServer) GenerateCodes(context.Context, *GenerateCodesRequest) (*GenerateCodesResponse, error) {
 	return nil, status.Error(codes.Unimplemented, "method GenerateCodes not implemented")
+}
+func (UnimplementedParticipantCodesServer) GenerateCode(context.Context, *GenerateCodeRequest) (*GenerateCodeResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method GenerateCode not implemented")
 }
 func (UnimplementedParticipantCodesServer) AssignCode(context.Context, *AssignCodeRequest) (*AssignCodeResponse, error) {
 	return nil, status.Error(codes.Unimplemented, "method AssignCode not implemented")
@@ -2163,6 +2179,24 @@ func _ParticipantCodes_GenerateCodes_Handler(srv interface{}, ctx context.Contex
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(ParticipantCodesServer).GenerateCodes(ctx, req.(*GenerateCodesRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _ParticipantCodes_GenerateCode_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GenerateCodeRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ParticipantCodesServer).GenerateCode(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ParticipantCodes_GenerateCode_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ParticipantCodesServer).GenerateCode(ctx, req.(*GenerateCodeRequest))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -2235,6 +2269,10 @@ var ParticipantCodes_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "GenerateCodes",
 			Handler:    _ParticipantCodes_GenerateCodes_Handler,
+		},
+		{
+			MethodName: "GenerateCode",
+			Handler:    _ParticipantCodes_GenerateCode_Handler,
 		},
 		{
 			MethodName: "AssignCode",
@@ -4420,6 +4458,184 @@ var DeviceTokens_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "DeleteToken",
 			Handler:    _DeviceTokens_DeleteToken_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "research-pillars/api/api.proto",
+}
+
+const (
+	AccessTokens_GetAccessTokens_FullMethodName     = "/proto.api.AccessTokens/GetAccessTokens"
+	AccessTokens_GenerateAccessToken_FullMethodName = "/proto.api.AccessTokens/GenerateAccessToken"
+	AccessTokens_DeleteAccessToken_FullMethodName   = "/proto.api.AccessTokens/DeleteAccessToken"
+)
+
+// AccessTokensClient is the client API for AccessTokens service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+type AccessTokensClient interface {
+	GetAccessTokens(ctx context.Context, in *GetAccessTokensRequest, opts ...grpc.CallOption) (*GetAccessTokensResponse, error)
+	GenerateAccessToken(ctx context.Context, in *GenerateAccessTokenRequest, opts ...grpc.CallOption) (*GenerateAccessTokenResponse, error)
+	DeleteAccessToken(ctx context.Context, in *DeleteAccessTokenRequest, opts ...grpc.CallOption) (*DeleteAccessTokenResponse, error)
+}
+
+type accessTokensClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewAccessTokensClient(cc grpc.ClientConnInterface) AccessTokensClient {
+	return &accessTokensClient{cc}
+}
+
+func (c *accessTokensClient) GetAccessTokens(ctx context.Context, in *GetAccessTokensRequest, opts ...grpc.CallOption) (*GetAccessTokensResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(GetAccessTokensResponse)
+	err := c.cc.Invoke(ctx, AccessTokens_GetAccessTokens_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *accessTokensClient) GenerateAccessToken(ctx context.Context, in *GenerateAccessTokenRequest, opts ...grpc.CallOption) (*GenerateAccessTokenResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(GenerateAccessTokenResponse)
+	err := c.cc.Invoke(ctx, AccessTokens_GenerateAccessToken_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *accessTokensClient) DeleteAccessToken(ctx context.Context, in *DeleteAccessTokenRequest, opts ...grpc.CallOption) (*DeleteAccessTokenResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(DeleteAccessTokenResponse)
+	err := c.cc.Invoke(ctx, AccessTokens_DeleteAccessToken_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// AccessTokensServer is the server API for AccessTokens service.
+// All implementations must embed UnimplementedAccessTokensServer
+// for forward compatibility.
+type AccessTokensServer interface {
+	GetAccessTokens(context.Context, *GetAccessTokensRequest) (*GetAccessTokensResponse, error)
+	GenerateAccessToken(context.Context, *GenerateAccessTokenRequest) (*GenerateAccessTokenResponse, error)
+	DeleteAccessToken(context.Context, *DeleteAccessTokenRequest) (*DeleteAccessTokenResponse, error)
+	mustEmbedUnimplementedAccessTokensServer()
+}
+
+// UnimplementedAccessTokensServer must be embedded to have
+// forward compatible implementations.
+//
+// NOTE: this should be embedded by value instead of pointer to avoid a nil
+// pointer dereference when methods are called.
+type UnimplementedAccessTokensServer struct{}
+
+func (UnimplementedAccessTokensServer) GetAccessTokens(context.Context, *GetAccessTokensRequest) (*GetAccessTokensResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method GetAccessTokens not implemented")
+}
+func (UnimplementedAccessTokensServer) GenerateAccessToken(context.Context, *GenerateAccessTokenRequest) (*GenerateAccessTokenResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method GenerateAccessToken not implemented")
+}
+func (UnimplementedAccessTokensServer) DeleteAccessToken(context.Context, *DeleteAccessTokenRequest) (*DeleteAccessTokenResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method DeleteAccessToken not implemented")
+}
+func (UnimplementedAccessTokensServer) mustEmbedUnimplementedAccessTokensServer() {}
+func (UnimplementedAccessTokensServer) testEmbeddedByValue()                      {}
+
+// UnsafeAccessTokensServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to AccessTokensServer will
+// result in compilation errors.
+type UnsafeAccessTokensServer interface {
+	mustEmbedUnimplementedAccessTokensServer()
+}
+
+func RegisterAccessTokensServer(s grpc.ServiceRegistrar, srv AccessTokensServer) {
+	// If the following call panics, it indicates UnimplementedAccessTokensServer was
+	// embedded by pointer and is nil.  This will cause panics if an
+	// unimplemented method is ever invoked, so we test this at initialization
+	// time to prevent it from happening at runtime later due to I/O.
+	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
+		t.testEmbeddedByValue()
+	}
+	s.RegisterService(&AccessTokens_ServiceDesc, srv)
+}
+
+func _AccessTokens_GetAccessTokens_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetAccessTokensRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(AccessTokensServer).GetAccessTokens(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: AccessTokens_GetAccessTokens_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(AccessTokensServer).GetAccessTokens(ctx, req.(*GetAccessTokensRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _AccessTokens_GenerateAccessToken_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GenerateAccessTokenRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(AccessTokensServer).GenerateAccessToken(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: AccessTokens_GenerateAccessToken_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(AccessTokensServer).GenerateAccessToken(ctx, req.(*GenerateAccessTokenRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _AccessTokens_DeleteAccessToken_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(DeleteAccessTokenRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(AccessTokensServer).DeleteAccessToken(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: AccessTokens_DeleteAccessToken_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(AccessTokensServer).DeleteAccessToken(ctx, req.(*DeleteAccessTokenRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// AccessTokens_ServiceDesc is the grpc.ServiceDesc for AccessTokens service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var AccessTokens_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "proto.api.AccessTokens",
+	HandlerType: (*AccessTokensServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "GetAccessTokens",
+			Handler:    _AccessTokens_GetAccessTokens_Handler,
+		},
+		{
+			MethodName: "GenerateAccessToken",
+			Handler:    _AccessTokens_GenerateAccessToken_Handler,
+		},
+		{
+			MethodName: "DeleteAccessToken",
+			Handler:    _AccessTokens_DeleteAccessToken_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
